chore(git): modified gitignore for coverage results.

--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,7 @@ bld/
 Generated\ Files/
 
 # MSTest test Results
-[Tt]est[Rr]esult*/
+#[Tt]est[Rr]esult*/
 [Bb]uild[Ll]og.*
 
 # NUnit
@@ -361,3 +361,7 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+
+coverage-report-demo/**
+
+FitnessReservation.Pricing.Tests/TestResults/**
