--- a/FitnessReservation.Api/FitnessReservation.Api.csproj
+++ b/FitnessReservation.Api/FitnessReservation.Api.csproj
@@ -2,6 +2,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\FitnessReservation.Pricing\FitnessReservation.Pricing.csproj" />
+    <ProjectReference Include="..\FitnessReservation.Reservations\FitnessReservation.Reservations.csproj" />
   </ItemGroup>
 
   <ItemGroup>
