chore(git): adding newman reporters to ignore.

--- a/.gitignore
+++ b/.gitignore
@@ -41,6 +41,11 @@ bld/
 # Visual Studio 2017 auto generated files
 Generated\ Files/
 
+# Newman
+postman/newman-report.html
+coverage-report/
+
+
 # MSTest test Results
 #[Tt]est[Rr]esult*/
 [Bb]uild[Ll]og.*
