--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,9 +2,13 @@ name: CI
 
 on:
   push:
-    branches: [ "master" ]
+    branches:
+      - master
+      - apiv1.2
   pull_request:
-    branches: [ "master" ]
+    branches:
+      - master
+      - apiv1.2
   workflow_dispatch:
 
 jobs:
