--- a/FitnessReservation.Api/FitnessReservation.Api.csproj
+++ b/FitnessReservation.Api/FitnessReservation.Api.csproj
@@ -3,9 +3,14 @@
   <ItemGroup>
     <ProjectReference Include="..\FitnessReservation.Pricing\FitnessReservation.Pricing.csproj" />
     <ProjectReference Include="..\FitnessReservation.Reservations\FitnessReservation.Reservations.csproj" />
+    <ProjectReference Include="..\FitnessReservation.Persistence\FitnessReservation.Persistence.csproj" />
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.4">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="10.0.1" />
   </ItemGroup>
 
