feat(database): in-memory to sqlite implementation (TDD refactor).

--- a/FitnessReservation.Persistence/FitnessReservation.Persistence.csproj
+++ b/FitnessReservation.Persistence/FitnessReservation.Persistence.csproj
@@ -17,6 +17,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\FitnessReservation.Pricing\FitnessReservation.Pricing.csproj" />
+    <ProjectReference Include="..\FitnessReservation.Reservations\FitnessReservation.Reservations.csproj" />
   </ItemGroup>
 
 </Project>
