--- a/FitnessReservation.Persistence/FitnessReservation.Persistence.csproj
+++ b/FitnessReservation.Persistence/FitnessReservation.Persistence.csproj
@@ -16,6 +16,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\FitnessReservation.Auth\FitnessReservation.Auth.csproj" />
     <ProjectReference Include="..\FitnessReservation.Pricing\FitnessReservation.Pricing.csproj" />
     <ProjectReference Include="..\FitnessReservation.Reservations\FitnessReservation.Reservations.csproj" />
   </ItemGroup>
