--- a/FitnessReservation.Reservations.Tests/FitnessReservation.Reservations.Tests.csproj
+++ b/FitnessReservation.Reservations.Tests/FitnessReservation.Reservations.Tests.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="FsCheck" Version="3.3.2" />
     <PackageReference Include="FsCheck.Xunit" Version="3.3.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.8.0" />
+    <PackageReference Include="Moq" Version="4.20.72" />
     <PackageReference Include="xunit" Version="2.5.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.5.3" />
   </ItemGroup>
