--- a/FitnessReservation.Api/FitnessReservation.Api.csproj
+++ b/FitnessReservation.Api/FitnessReservation.Api.csproj
@@ -1,6 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <ItemGroup>
+    <ProjectReference Include="..\FitnessReservation.Auth\FitnessReservation.Auth.csproj" />
     <ProjectReference Include="..\FitnessReservation.Pricing\FitnessReservation.Pricing.csproj" />
     <ProjectReference Include="..\FitnessReservation.Reservations\FitnessReservation.Reservations.csproj" />
     <ProjectReference Include="..\FitnessReservation.Persistence\FitnessReservation.Persistence.csproj" />
