Enable CI for apiv1 branches

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,10 +5,12 @@ on:
     branches:
       - master
       - apiv1.2
+      - apiv1.3
   pull_request:
     branches:
       - master
       - apiv1.2
+      - apiv1.3
   workflow_dispatch:
 
 jobs:
